# hc-web

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  serial.h
src/: CMakeLists.txt  hc_cntl.cpp  hc_cntl.hpp  hc_master.cpp  hc_master.hpp  hc_serial.cpp  hc_serial.hpp  hc_wgt.cpp  hc_wgt.hpp  main.cpp  serial.c
src/data/: hc_data.hpp
